更新jvm